# kvproto

./: .Cargo.toml.swp  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  Gopkg.toml  Makefile  OWNERS  OWNERS_ALIASES  README.md  build.rs  circle.yml  common.sh  generate_cpp.sh  generate_go.sh  generate_rust.sh  glide.yaml  go.mod  go.sum  pom.xml  tools.json
.agents/skills/: README.md
.circleci/: config.yml
.github/workflows/: cpp-test.yaml  debpkg.yaml  golang-test.yaml  rust-test.yaml
cpp/: CMakeLists.txt  coprocessor.pb.cc  coprocessor.pb.h  debugpb.pb.cc  debugpb.pb.h  errorpb.pb.cc  errorpb.pb.h  import_kvpb.pb.cc  import_kvpb.pb.h  import_sstpb.pb.cc  import_sstpb.pb.h  kvrpcpb.pb.cc  kvrpcpb.pb.h  metapb.pb.cc  metapb.pb.h  pdpb.pb.cc  pdpb.pb.h  raft_cmdpb.pb.cc  raft_cmdpb.pb.h  raft_serverpb.pb.cc  raft_serverpb.pb.h  tikvpb.pb.cc  tikvpb.pb.h
cpp/cmake/: find_abseil-cpp.cmake  find_grpc.cmake  find_protobuf.cmake
debian/: .gitignore  changelog  control  copyright  gbp.conf  gitlab-ci.yml  rules
docs/design/: db9-coprocessor.md
include/: eraftpb.proto  rustproto.proto
pkg/apipb/: apipb.pb.go
pkg/autoid/: autoid.pb.go
pkg/backup/: backup.pb.go  backup.pb.json.go
pkg/brpb/: backup_schema_version.go  brpb.pb.go
pkg/brpb2/: brpb2.pb.go
pkg/cdcpb/: cdcpb.pb.go  cdcpb.pb.json.go
pkg/configpb/: configpb.pb.go  configpb.pb.gw.go  configpb.pb.json.go
pkg/coprocessor/: coprocessor.pb.go  coprocessor.pb.json.go  coprocessor_test.go
pkg/coprocessor_v2/: coprocessor_v2.pb.go  coprocessor_v2.pb.json.go
pkg/db9_coprocessor/: db9_coprocessor.pb.go
pkg/deadlock/: deadlock.pb.go  deadlock.pb.json.go
pkg/debugpb/: debugpb.pb.go  debugpb.pb.json.go
pkg/diagnosticspb/: diagnosticspb.pb.go  diagnosticspb.pb.json.go
pkg/disaggregated/: disaggregated.pb.go
pkg/disk_usage/: disk_usage.pb.go
pkg/edition/: edition.pb.go  edition_dedicated.go  edition_default.go  util.go
pkg/encryptionpb/: encryptionpb.pb.go  encryptionpb.pb.json.go
pkg/enginepb/: enginepb.pb.go  enginepb.pb.json.go
pkg/eraftpb/: eraftpb.pb.go  eraftpb.pb.json.go
pkg/errorpb/: errorpb.pb.go  errorpb.pb.json.go
pkg/etcdpb/: etcdpb.pb.go
pkg/externalworkloadpb/: externalworkloadpb.pb.go
pkg/flash/: flash.pb.go
pkg/fr_proxy/: fr_proxy.pb.go
pkg/gcpb/: gcpb.pb.go
pkg/import_kvpb/: import_kvpb.pb.go  import_kvpb.pb.json.go
pkg/import_sstpb/: import_sstpb.pb.go  import_sstpb.pb.json.go
proto/: OWNERS  autoid.proto  backup.proto  brpb.proto  brpb2.proto  cdcpb.proto  configpb.proto  coprocessor.proto  coprocessor_v2.proto  db9_coprocessor.proto  deadlock.proto  debugpb.proto  diagnosticspb.proto  disaggregated.proto  disk_usage.proto  edition.proto  encryptionpb.proto  enginepb.proto  eraftpb.proto  errorpb.proto  etcdpb.proto  externalworkloadpb.proto  fr_proxy.proto  gcpb.proto  import_kvpb.proto  import_sstpb.proto  importpb.proto  keyspace_encryptionpb.proto  keyspacepb.proto  kvpb.proto  kvrpcpb.proto  logbackuppb.proto  meta_storagepb.proto  metapb.proto  mpp.proto  msgpb.proto  mvccpb.proto  pdpb.proto  pdpb2.proto  raft_cmdpb.proto  (+18 more)
proto-cpp/: backup.proto  cdcpb.proto  configpb.proto  coprocessor.proto  diagnosticspb.proto  encryptionpb.proto  import_kvpb.proto  import_sstpb.proto  kvrpcpb.proto  metapb.proto  pdpb.proto  tikvpb.proto
scripts/: check.sh  common.sh  docker-build.sh  docker-run.sh  generate_cpp.sh  generate_go.sh  proto_format.sh
src/: coprocessor.rs  debugpb.rs  debugpb_grpc.rs  eraftpb.rs  errorpb.rs  import_kvpb.rs  import_sstpb.rs  importpb.rs  kvpb.rs  kvrpcpb.rs  lib.rs  metapb.rs  msgpb.rs  mvccpb.rs  pd_jobpb.rs  pdpb.rs  pdpb2.rs  pdpb2_grpc.rs  pdpb_grpc.rs  prost.rs  protobuf.rs  raft_cmdpb.rs  raft_serverpb.rs  raft_serverpb_grpc.rs  raft_storepb.rs  raftpb.rs  text.rs  tikvpb.rs  tikvpb_grpc.rs  util.rs
(+77 files in other folders)
