[package]
name = "kvproto"
version = "0.0.2"
keywords = ["TiKV"]
edition = "2018"
build = "build.rs"

[lib]
name = "kvproto"
path = "src/lib.rs"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["raft-proto/protobuf-codec"]
prost-codec = ["prost-derive", "bytes", "lazy_static", "raft-proto/prost-codec"]
gen = []

[dependencies]
protobuf = "2"
prost = { git = "https://github.com/danburkert/prost", rev = "1944c27c3029d01ff216e7b126d846b6cf8c7d77" }
prost-derive = { git = "https://github.com/danburkert/prost", rev = "1944c27c3029d01ff216e7b126d846b6cf8c7d77", optional = true }
bytes = { version = "0.4", optional = true }
futures = "0.1"
grpcio = { version = "0.5.0-alpha.1", features = ["prost-codec"] }
raft-proto = { git = "https://github.com/nrc/raft-rs", branch="both-0.4", default-features = false }
lazy_static = { version = "1.3", optional = true }

[build-dependencies]
protobuf-build = "0.7"

[replace]
"prost:0.5.0" = { git = "https://github.com/danburkert/prost", rev = "1944c27c3029d01ff216e7b126d846b6cf8c7d77" }
